associations in easy admin

--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -14,6 +14,9 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password"/>
 
+        <label for="remember_me">Keep me logged in</label>
+        <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+
         <button type="submit">Login</button>
     </form>
 {% endblock %}
